review leetcode-07~10